<package>
  <name>rtt_ros_tools</name>
  <version>0.1.0</version>
  <description>
    This package contains utilities and helper libraries for use in OROCOS/RTT
    components in a ROS application.
    
    See the C++ API for more details.
  </description>
  <maintainer email="jbo@Jhu.edu">Jonathan Bohren</maintainer>

  <license>BSD</license>

  <author>Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this pacakge. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>cmake_modules</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_rosnode</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
    </rtt_ros>
  </export>
</package>
